# gamegusto

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  bootstrap.py  cli.py  config.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-gmail.txt  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.kiro/specs/game-recommendation-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: code-quality.md  environment-setup.md  git-workflow.md  testing-strategy.md
.streamlit/: secrets.toml.example
agent/: deals.py  enricher.py  library_service.py  mood_interpreter.py  orchestrator.py  platform_match.py  recommender.py  runtime.py  time_parser.py  tools.py
api/: __init__.py  app.py  auth.py  main.py  schemas.py
design/: README.md  tokens.css  tokens.json
docs/: adding-users.md  agent-rearchitecture.md  data-contract.md
docs/v1-spec/: design.md  requirements.md  tasks.md
infra/: README.md
infra/bootstrap/: boundary.tf  deploy.tf  outputs.tf  state.tf  terraform_user.tf  v1_user.tf  variables.tf  verify_policy.py  versions.tf
infra/stack/: .terraform.lock.hcl  cloudfront.tf  cognito.tf  iam.tf  lambda.tf  outputs.tf  ssm.tf  variables.tf  versions.tf
models/: game_record.py  platform.py  recommendation.py  session.py
scripts/: build_lambda.sh  check_access.py  check_llm.py  gmail_authorize.py  mock_api.py  provision_dynamodb.py
secrets/: README.md
services/: bedrock_service.py  dynamodb_memory_client.py  error_handler.py  igdb_service.py  memory_service.py  search_service.py  tavily_service.py
services/sources/: base.py  gmail_source.py  manual_source.py  xbox_source.py
tests/: conftest.py  test_agent_flow.py  test_api.py  test_auth.py  test_bedrock_tool_use.py  test_bootstrap.py  test_cli.py  test_config.py  test_conversation_flow.py  test_deals.py  test_dynamodb_memory_client.py  test_enricher.py  test_error_handler_properties.py  test_gmail_parsers.py  test_gmail_source_properties.py  test_igdb_service.py  test_library_service_properties.py  test_memory_service_properties.py  test_models.py  test_mood_interpreter_properties.py  test_orchestrator.py  test_orchestrator_platform_gate_properties.py  test_platform_match.py  test_recommender_properties.py  test_runtime.py  test_search_service_properties.py  test_tavily_service_properties.py  test_time_parser_properties.py  test_tools.py  test_ui_smoke.py
ui/: app.py  bootstrap.py  chat_view.py  library_view.py  sidebar.py  theme.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  api.ts  auth.ts  main.tsx  markdown.tsx  taste.ts  vite-env.d.ts
web/src/components/: AddGameSheet.tsx  ChatView.tsx  GameSheet.tsx  LibraryView.tsx  Logo.tsx  RecCard.tsx
web/src/styles/: index.css
