[project]
name = "gamegusto"
version = "0.1.0"
description = "GameGusto - a mood-aware game recommendation agent."
# Deployment (Lambda, python3.13) runs 3.13; 3.11 is the compatibility
# floor so the code also runs on any recent interpreter. Python 3.9 is EOL.
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "dist"]  # dist/ is Lambda build output, not source

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
# Checked against the version that actually runs (local venv + Streamlit Cloud).
# Kept >= 3.12 regardless: third-party stubs (numpy) use `type` statements that
# older typecheck targets refuse to parse.
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
# dist/ is the vendored dependency tree for the Lambda bundle. Type checking
# someone else's shipped code — and its stdlib-shadowing modules — says
# nothing about ours.
exclude = ['^\.venv/', '^dist/']

[[tool.mypy.overrides]]
# Third-party packages without bundled type stubs.
module = [
    "boto3.*",
    "botocore.*",
    # Present in the venv and the Lambda bundle, but not in the pre-commit
    # hook's isolated env: it has no wheel for this interpreter and building
    # from source needs a Rust/OpenSSL toolchain. Only the auth tests import
    # it, to generate real RSA keys.
    "cryptography.*",
    "tavily.*",
    "googleapiclient.*",
    "google.*",
    "google_auth_oauthlib.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise real external services (need credentials)",
    "e2e: end-to-end conversational flow tests",
]
# Default fast run excludes the slow layers and enforces the coverage floor.
addopts = "-m \"not integration and not e2e\" --cov=. --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
    "scripts/*",
    # Streamlit render modules need a running app context, not unit coverage;
    # their pure helpers are smoke-tested in tests/test_ui_*.py.
]
